Fix text alignment of AddTag legends.

--- a/assets/js/argumenta/widgets/AddTag/style.css
+++ b/assets/js/argumenta/widgets/AddTag/style.css
@@ -17,6 +17,10 @@ form.new-tag {
   border: 0px solid #ccc;
   vertical-align: middle;
 }
+.tag-dialogue fieldset legend {
+  text-align: center;
+  width: 100%;
+}
 .tag-dialogue button {
   padding: 4px;
   font-size: 13px;
